--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
 		"pretest": "npm run compile && npm run lint",
 		"test": "node ./out/test/runTest.js"
 	},
+	"dependencies": {
+		"simple-git": "2.37.0"
+	},
 	"devDependencies": {
 		"@types/vscode": "^1.54.0",
 		"@types/glob": "^7.1.3",
