--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,8 @@
 .vscode/**
 .vscode-test/**
-out/**
+out/test/**
 src/**
 .gitignore
-.yarnrc
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/.eslintrc.json
